# Open-Source-Gov-Dataset-Extraction-tool

./: .gitignore  01_April_2025_HSCA_Active_Locations_Dual_Registration_Locations.csv  01_April_2025_Latest_ratings_Providers.csv  Employment_16-04-2025.csv  Makefile  README.md  payment_practices.py  payment_practices_1.py  pyproject.toml  requirements.txt  tef_2024.py
.csvs/: payment_practise.csv
helper_scripts/: helper.py
input_data/: GroupExtract.csv
src/dataset_scripts/: 1_payment_practices.py  3_ofs_register.py  CQC.py  Nomis.py  QCQ.py  ofs_register.py  parent_companies.py  parliament.py  payment_practices.py  proprietors.py  tef_2024.py  trustees.py
src/dataset_scripts/care_quality_commission/: CQC.py
src/dataset_scripts/companies_house/: parent_companies.py  trustees.py
src/dataset_scripts/nomis/: Nomis.py  employment.py  ethnicities.py  national_averages.py  population.py  population_estimate.py  unemployment.py
src/dataset_scripts/office_for_students/: ofs_register.py
src/dataset_scripts/parliament/: parliament.py
tests/: CQC_test.py  Nomis_test.py  nomis_test.py  ofs_register_test.py  parent_companies_test.py  parliament_test.py  payment_practices_test.py  proprietors_test.py  tef_2024_test.py  tef_2024_test_py  trustees_test.py
tests/test_datasets/: nomis_averages_test_file.csv  nomis_employment_1_test_file.csv  nomis_employment_2_test_file.csv  nomis_ethnicities_test_file.csv  nomis_population_estimate_test_file.csv  nomis_population_test_file.csv  nomis_unemployment_test_file.csv  proprietors_test_file.csv
(+1 files in other folders)
