[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset_scripts"
version = "0.1.0"
description = "Scripts for handling datasets"
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name="Your Name", email="you@example.com" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

